# OpenCLtutorial

./: README.md
1_CheckDevice/: CMakeLists.txt  main.cpp
2_Kernels/: CMakeLists.txt  HelloWorld.cl  main.cpp
3_Array/: CMakeLists.txt  ProcessArray.cl  main.cpp
4_MultidimensionalArray/: CMakeLists.txt  ProcessMultidimensionalArray.cl  main.cpp
5_NumericalReduction/: CMakeLists.txt  NumericalReduction.cl  main.cpp
